[package]
name = "apitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
btleplug = { version = "0.11.8", features = ["serde"] }
gilrs = "0.11.0"
hex = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.44.2", features = ["sync", "rt", "full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
